Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,8 @@ variables:
   tag: '$(Build.BuildId)'
 
 resources:
+  repositories:
+    - repository: self
   containers:
   - container: neuvector
     container_name: neuvector
