--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,9 +34,9 @@ stages:
       inputs:
         controllerType: 'external'
         neuvectorController: 'nv-gke'
-        containerRegistry: 'dockerhub'
+        #containerRegistry: 'dockerhub'
         repository: 'achdevops/holapy-azure'
-        tag: '22'
+        tag: '$(Build.BuildId)'
         #failOnHighSeverityThreshold: true
         #highSeverityThreshold: '1'
         #failOnMediumSeverityThreshold: true
