--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,14 @@ stages:
         containerRegistry: 'dockerhub'
         repository: 'achdevops/holapy-azure'
         tag: '$(Build.BuildId)'
+        reportJsonOutputPath: 'report.json'
         #failOnHighSeverityThreshold: true
         #highSeverityThreshold: '1'
         #failOnMediumSeverityThreshold: true
         #mediumSeverityThreshold: '3'
+    - task: DownloadBuildArtifacts@0
+      inputs:
+        buildType: 'current'
+        downloadType: 'specific'
+        itemPattern: 'report.json'
+        downloadPath: '$(System.ArtifactsDirectory)'
